<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_bg"
    tools:context=".ActivityRegister">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="logo agrodetec"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_agrodetec" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtRegisterName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
            android:background="@drawable/shape"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/user"
            android:drawablePadding="8dp"
            android:drawableTint="#0D6935"
            android:ems="10"
            android:fontFamily="@font/mulish"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingHorizontal="6dp"
            android:paddingVertical="10dp"
            android:textColor="#000000"
            android:textColorHint="#FF858585"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerNow" />

        <EditText
            android:id="@+id/txtRegisterEmail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAdress"
            android:background="@drawable/shape"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/email_24"
            android:drawablePadding="8dp"
            android:drawableTint="#0D6935"
            android:ems="10"
            android:fontFamily="@font/mulish"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="6dp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textColorHint="#909090"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterName" />


        <EditText
            android:id="@+id/txtRegisterPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="password"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/password_24"
            android:drawablePadding="8dp"
            android:drawableTint="#0D6935"
            android:ems="10"
            android:fontFamily="@font/mulish"
            android:hint="@string/password"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:paddingHorizontal="6dp"
            android:paddingVertical="10dp"
            android:textColor="#000000"
            android:textColorHint="#FF858585"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterEmail" />

        <Button
            android:id="@+id/btnSubmitRegister"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#0D6935"
            android:fontFamily="@font/krub_semibold"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/txtRegisterPassword"
            app:layout_constraintStart_toStartOf="@+id/txtRegisterPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/krub_semibold"
            android:text="@string/alreadyUsing"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/btnSubmitRegister"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmitRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>